--- a/css/style.css
+++ b/css/style.css
@@ -147,3 +147,13 @@ body {
 .card {
   width: 800px;
 }
+
+#map,
+.move-right {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.addSpace {
+  margin-left: 20px;
+}
